--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ether
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("Sanjay Govinda", "Last", email = "Blanked", role = c("aut", "cre"))
+Authors@R: person("Sanjay Govindan", "Last", email = "Blanked", role = c("aut", "cre"))
 Imports: zoo
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.1)
